--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "DuocDev",
+  "license": "MIT",
   "dependencies": {
     "@ltv/env": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^9.23.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1"
-  },
-  "devDependencies": {
+    "mongoose": "^7.3.1",
+    "morgan": "^1.10.0"
   }
 }
